[FEATURE] implement security and add Seller Entity.